src/objects/QPMS__Assessment_Options__c.object
<CustomObject>
    <description>This object is used to store the assessment options for assessment questions.</description>
    <fields>
        <fullName>QPMS__Assessment_Options_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this filed is used Assessment Options Template</description>
        <label>Assessment Options Template</label>
        <referenceTo>QPMS__Assessment_Options_Template__c</referenceTo>
        <relationshipLabel>Assessment Optionss</relationshipLabel>
        <relationshipName>Assessment_Optionss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Assessment_Questions__c</fullName>
        <description>This field stores assessment question</description>
        <label>Assessment  Questions</label>
        <referenceTo>QPMS__Assessment__c</referenceTo>
        <relationshipLabel>Assessment Optionss</relationshipLabel>
        <relationshipName>Assessment_Optionss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QPMS__Correct_Answer__c</fullName>
        <label>Correct Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
                <value>
                    <fullName>Option4</fullName>
                </value>
                <value>
                    <fullName>Option5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Option1__c</fullName>
        <description>this field is used to storefield q1value</description>
        <label>Option1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Option2__c</fullName>
        <description>This field is used to store Option2 value</description>
        <label>Option2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Option3__c</fullName>
        <description>this field is used Option3 value</description>
        <label>Option3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Pass_Fail__c</fullName>
        <description>This field stores the pass and fail value</description>
        <label>Pass-Fail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__QA_Comment__c</fullName>
        <description>Testing Field</description>
        <label>QA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Selected_Answer__c</fullName>
        <label>Selected Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option1</fullName>
                </value>
                <value>
                    <fullName>Option2</fullName>
                </value>
                <value>
                    <fullName>Option3</fullName>
                </value>
                <value>
                    <fullName>Option4</fullName>
                </value>
                <value>
                    <fullName>Option5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assessment Options</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AO-{0000}</displayFormat>
        <label>Assessment Options Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Optionss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>